balls z-index fixed

--- a/style.css
+++ b/style.css
@@ -183,10 +183,10 @@ body{
     animation-duration: 0.4s
 }
 .ball {
-    position: absolute;
+    position: fixed;
     border-radius: 100%;
     opacity: 0.7;
-    z-index: 0;
+    z-index: -10;
 }
 /* Add Animation */
 @keyframes animatetop {
